<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2012 Ludger Heide ludger.heide@gmail.com
  ~ This work is free. You can redistribute it and/or modify it under the
  ~ terms of the Do What The Fuck You Want To Public License, Version 2,
  ~ as published by Sam Hocevar. See the COPYING file for more details..
  -->

<resources>
    <string name="app_name">DoorApp</string>

    <!-- GUI !-->
    <string name="AbortButtonTitle">Abort</string>
    <string name="FrontDoorTitle">Open the front door</string>
    <string name="FlatDoorTitle">Open the flat door</string>
    <string name="LetInTitle">Let Someone In</string>
    <string name="DoorCode">Authentification code:</string>
    <string name="StatusNotAuthenticated">"Status: Not Authenticated"</string>
    <string name="StatusAuthenticating">Status: Connecting</string>
    <string name="StatusAuthenticated">Status: Authenticated</string>
    <string name="StatusBuzzing">Status: Buzzing</string>

    <!-- Setup screen !-->
    <string name="ScreenTitle">Initial setup</string>
    <string name="NoCredentials">I have not received a code</string>
    <string name="Credentials">I have received a code</string>
    <string name="Continue">Continue</string>
    <string name="CredentialFieldLabel">Please enter your code here:</string>
    <string name="tfUrlTitle">URL of the server:</string>
    <string name="defaultURL">https://lht2.no-ip.biz/auth.php</string>
    <string name="InvalidTextTitle">Invalid text!</string>
    <string name="InvalidTextExplanantion">Please enter a correct device name or code</string>

    <!-- MainActivity.java strings !-->
    <string name="OKButtonTitle">OK</string>

    <string name="AuthenticationFailedTitle">Authentication Failed!</string>
    <string name="RegistrationStartedTitle">Registration started!</string>
    <string name="RegistrationFailedTitle">Registration Failed!</string>
    <string name="RegistrationFailedExplanantion">The registration failed. Error Code:</string>

    <string name="InternalFailureExplanantion">The server reported an internal failure. Please contact the
        administrator
    </string>
    <string name="AuthFailureExplanantion">The server reported an authentication failure. Please contact the
        administrator
    </string>
    <string name="RegistrationPendingExplanantion">Your device is still pending confirmation. Please contact the
        administrator
    </string>
    <string name="RegistrationStartedExplanantion">Your device has been registered and is pending confirmation. If this
        is not the first time you see this alert, please contact the administrator
    </string>
    <string name="ClientErrorExplanantion">The client reported an error establishing the connection. Please contact the
        administrator
    </string>
    <string name="UnknownErrorExplanation">Unknown failure. Please contact the administrator</string>
    <string name="MalformedURLExplanation">Malformed URL. Please reinstll the App. (This will not be necessary soon)
    </string>
    <string name="DeviceNameDescription">Device Name (e.g. ludgernexus)</string>
</resources>
