<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScreenTitle"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:textAlignment="center"
            />

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NoCredentials"
            android:id="@+id/rbNoCode"
            android:layout_gravity="left|center_vertical"
            android:onClick="noCode"
            android:enabled="true"
            android:checked="true"
            android:clickable="true"
            android:textSize="20dp"/>

    <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Credentials"
            android:id="@+id/rbHaveCode"
            android:layout_gravity="left|center_vertical"
            android:onClick="haveCode"
            android:clickable="true"
            android:enabled="true"
            android:textSize="20dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfUrlTitle"
            android:id="@+id/textView2"
            android:layout_gravity="left|center_vertical"
            android:textSize="20dp"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/defaultURL"
            android:id="@+id/tfUrl"
            android:layout_gravity="left|center_vertical"
            android:editable="true"
            android:enabled="true"
            android:inputType="textUri"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DeviceNameDescription"
            android:id="@+id/textView1"
            android:layout_gravity="left|center_vertical"
            android:textSize="20dp"
            android:singleLine="false"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tfDeviceName"
            android:layout_gravity="left|center_vertical"
            android:singleLine="false"
            android:inputType="text"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CredentialFieldLabel"
            android:id="@+id/laCode"
            android:layout_gravity="left|center_vertical"
            android:textIsSelectable="false"
            android:textSize="20dp"
            android:visibility="invisible"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tfCode"
            android:layout_gravity="left|center_vertical"
            android:singleLine="true"
            android:visibility="invisible"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:onClick="continueButton"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AbortButtonTitle"
            android:id="@+id/buAbort"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:onClick="abort"/>

    <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"/>
</LinearLayout>